@@ -2,7 +2,7 @@ Microsoft Visual Studio Solution File, Format Version 10.00
 # Visual Studio 2008
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{53ED5FFE-04BF-4FBF-AEA7-454502DAE200}"
 	ProjectSection(SolutionItems) = preProject
-		..\ChangeLog.txt = ..\ChangeLog.txt
+		ChangeLog.txt = ChangeLog.txt
 		ToDo.txt = ToDo.txt
 	EndProjectSection
 EndProject
