@@ -105,6 +105,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="AssemblyResourceLoaderTestCase.cs" />
     <Compile Include="DuckTestCase.cs" />
     <Compile Include="MultiThreadTestCase.cs" />
